# betheshoe

./: .gitignore  LICENSE  README.md  legacy.py  manage.py  npm-shrinkwrap.json  package-lock.json  package.json  pyproject.toml  requirements.txt
betheshoe/: assets.py  context_processors.py  helpers.py  settings.py  urls.py  views.py  wsgi.py
betheshoe/blog/: admin.py  models.py  urls.py  views.py
betheshoe/blog/migrations/: 0001_initial.py  0002_migrate_from_scruffyblog.py  0003_auto_20141124_1154.py  0004_auto_20141124_1204.py  0005_auto_20151213_1630.py
betheshoe/blog/templatetags/: blog_tags.py
betheshoe/links/: admin.py  models.py
betheshoe/links/migrations/: 0001_initial.py  0002_auto_20141214_1805.py
betheshoe/movies/: admin.py  models.py  urls.py
betheshoe/movies/migrations/: 0001_initial.py  0002_auto_20151124_1335.py  0002_auto__del_awards__add_award.py  0002_award.py  0002_movie_credits.py  0003_movie_facebook_url.py  0004_auto__add_field_show_date__add_field_show_time.py  0004_movie_story.py
betheshoe/music/: admin.py  models.py  views.py
betheshoe/staff/: admin.py  models.py  views.py
betheshoe/templates/: base.html  index.html  movie-list.html  movie.html  privacy.html
betheshoe/templatetags/: responsive_tags.py
movies/: admin.py  models.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0003_auto__add_field_show_slug.py  0005_auto__add_field_movie_poster.py  0006_auto__add_field_movie_genre.py
movies/templatetags/: movie_tags.py
staff/: admin.py  models.py
staff/migrations/: 0004_auto__add_field_staffer_group.py
(+79 files in other folders)
